Fixed layout problem on edit track screen

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -267,6 +267,7 @@ button {
  * ============================== */
 
 .edit-track-settings {
+	line-height: 24px;
 	margin: 10px 10px 5px;
 }
 
